[package]
name = "tma-init-data"
description = "Utilities to work with Telegram Mini Apps init data."
version = "1.1.1"
edition = "2021"
license = "MIT"
authors = ["Vassiliy Kuzenkov <batbondik0@gmail.com>"]
keywords = ["tma", "telegram", "mini-apps", "init-data", "utilities"]

[lib]
name = "tma_init_data"
path = "src/lib.rs"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
phf = { version = "0.11.3", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
url = "2.5.4"
