[package]
name = "tma-init-data"
description = "Utilities to work with Telegram Mini Apps init data."
version = "1.3.0"
edition = "2021"
license = "MIT"
authors = ["Vassiliy Kuzenkov <batbondik0@gmail.com>"]
keywords = ["tma", "telegram", "mini-apps", "init-data", "utilities"]

[lib]
name = "tma_init_data"
path = "src/lib.rs"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
url = "2.5.7"
